new dockerfile with ubi micro and image pull fixed with platform option