@@ -42,19 +42,129 @@ COPY . .
 RUN gradle build -x test --no-daemon
 RUN gradle copy -x test --no-daemon
 
-FROM registry.access.redhat.com/ubi8/ubi-minimal:8.10
+FROM eclipse-temurin:17-jdk-ubi9-minimal AS jre-build
 
+COPY --from=builder packaging/iofog-agent/usr ./usr
+
+# Extract and analyze dependencies for the iofog-agent JAR
+RUN jar xf /usr/bin/iofog-agent.jar && \
+    jdeps \
+        --ignore-missing-deps \
+        --print-module-deps \
+        --multi-release 17 \
+        --recursive \
+        --class-path 'BOOT-INF/lib/*' \
+        /usr/bin/iofog-agent.jar > iofog-agent.txt
+
+# Extract and analyze dependencies for the iofog-agentd JAR
+RUN jar xf /usr/bin/iofog-agentd.jar && \
+    jdeps \
+        --ignore-missing-deps \
+        --print-module-deps \
+        --multi-release 17 \
+        --recursive \
+        --class-path 'BOOT-INF/lib/*' \
+        /usr/bin/iofog-agentd.jar > iofog-agentd.txt
+
+# Extract and analyze dependencies for the iofog-agentvc JAR
+RUN jar xf /usr/bin/iofog-agentvc.jar && \
+    jdeps \
+        --ignore-missing-deps \
+        --print-module-deps \
+        --multi-release 17 \
+        --recursive \
+        --class-path 'BOOT-INF/lib/*' \
+        /usr/bin/iofog-agentvc.jar > iofog-agentvc.txt
+
+# Merge the dependency files, remove duplicates, and format properly
+RUN cat iofog-agent.txt iofog-agentd.txt iofog-agentvc.txt | \
+    sort | uniq | paste -sd "," - > modules.txt
+
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules $(cat modules.txt) \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
+
+# Base builder stage for dependencies using UBI Minimal
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest AS ubi-dep
+
+# Install necessary dependencies
 RUN true && \
-    microdnf install -y curl ca-certificates java-17-openjdk-headless sudo shadow-utils && \
+    microdnf install -y ca-certificates shadow-utils gzip procps-ng && \
+    microdnf reinstall -y tzdata && \
     microdnf clean all && \
+    rm -rf /var/cache/* && \
     true
 
-#RUN mkdir -p  /etc/bash_completion.d/
-#RUN mkdir -p  /etc/init.d/
-#RUN mkdir -p  /etc/iofog-agent/
-#RUN mkdir -p  /usr
+RUN true && \
+    useradd -r -U -s /usr/bin/nologin iofog-agent && \
+    usermod -aG root,wheel iofog-agent && \
+    true
 
-RUN echo "securerandom.source=file:/dev/urandom" >> /etc/alternatives/jre/lib/security/java.security
+# Final stage using UBI Micro
+FROM registry.access.redhat.com/ubi9/ubi-micro:latest
+
+# Copy dependencies from the ubi-dep stage
+COPY --from=ubi-dep /usr/share/zoneinfo /usr/share/zoneinfo
+COPY --from=ubi-dep /usr/bin/curl /usr/bin/
+COPY --from=ubi-dep /usr/bin/grep /usr/bin/
+COPY --from=ubi-dep /usr/bin/gzip /usr/bin/
+COPY --from=ubi-dep /usr/bin/pgrep /usr/bin/
+COPY --from=ubi-dep /usr/bin/awk /usr/bin/
+COPY --from=ubi-dep /etc/ssl/certs/ca-bundle.crt /etc/ssl/certs/
+
+# Copy required shared libraries for curl grep awk
+COPY --from=ubi-dep /usr/lib64/libc.so.6 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libcom_err.so.2 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libcrypto.so.3 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libcurl.so.4 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libffi.so.8 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libgmp.so.10 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libgnutls.so.30 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libgssapi_krb5.so.2 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libpcre.so.1 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libhogweed.so.6 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libidn2.so.0 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libk5crypto.so.3 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libkeyutils.so.1 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libkrb5.so.3 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libkrb5support.so.0 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libnettle.so.8 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libnghttp2.so.14 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libp11-kit.so.0 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libresolv.so.2 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libssl.so.3 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libtasn1.so.6 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libunistring.so.2 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libz.so.1 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libzstd.so.1 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libm.so.6 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libmpfr.so.6 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libreadline.so.8 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libsigsegv.so.2 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libtinfo.so.6 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libprocps.so.8 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libsystemd.so.0 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/liblz4.so.1 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libcap.so.2  /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libgcrypt.so.20  /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/libgpg-error.so.0 /usr/lib64/
+COPY --from=ubi-dep /usr/lib64/liblzma.so.5 /usr/lib64/
+
+
+# Copy the iofog-agent user and related configurations
+COPY --from=ubi-dep /etc/passwd /etc/passwd
+COPY --from=ubi-dep /etc/group /etc/group
+COPY --from=ubi-dep /etc/shadow /etc/shadow
+
+
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+COPY --from=jre-build /javaruntime $JAVA_HOME
 
 COPY --from=builder packaging/iofog-agent/usr ./usr
 COPY --from=builder packaging/iofog-agent/etc/init.d /etc/init.d/
@@ -62,8 +172,6 @@ COPY --from=builder packaging/iofog-agent/etc/bash_completion.d /etc/bash_comple
 COPY --from=builder packaging/iofog-agent/etc/iofog-agent /etc/iofog-agent/
 
 RUN true && \
-    useradd -r -U -s /usr/bin/nologin iofog-agent && \
-    usermod -aG root,wheel iofog-agent && \
     mv /etc/iofog-agent/config_new.xml /etc/iofog-agent/config.xml && \
     mv /etc/iofog-agent/config-development_new.xml /etc/iofog-agent/config-development.xml && \
     mv /etc/iofog-agent/config-production_new.xml /etc/iofog-agent/config-production.xml && \
@@ -90,5 +198,9 @@ RUN true && \
     chmod 754 /usr/bin/iofog-agent && \
     chown :iofog-agent /usr/bin/iofog-agent && \
     true
+
+ENV LANG=C.UTF-8
+ENV LC_ALL=C.UTF-8
+ENV TZ="Europe/Istanbul"
 
 CMD [ "java", "-jar", "/usr/bin/iofog-agentd.jar", "start" ]
